# wise-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_idea_endpoints.sh  test_ideas.sh
src/: main.rs
src/config/: mod.rs
src/handlers/: auth.rs  health.rs  ideas.rs  mod.rs  protected_example.rs
src/middleware/: auth.rs  mod.rs
src/models/: idea.rs  mod.rs  user.rs
